  with no fields, instead of producing an error.  A corresponding change
  has not yet been applied to the MIF driver. NFW

- Fixed lots of places that check for errors by examining CPLGetLastErrorNo().
  A warning will trigger all these places as an error.  Changed to check that
  the last error type was CE_Failure and add a CPLErrorReset() at the 
  beginning of many affected sections.  NFW


Version 1.2.2 - (2002-07-06)
----------------------------

- Added a validation in TABMAPFile::GetFeatureId(). When there's no .map file 
  or no spatial indexes or no geometry, the function return -1 like an Eof.
  This prevent the reading of a file set to NULL. (bug 169 (MapServer))

- Treat Region as MultiPolygon in mitab_c_set_point() to support Regions
  with multiple islands and holes. Passing a part number <= 0 (second 
  parameter in mitab_c_set_point()) will result in adding a new island 
  (i.e. polygon).  By default, parts > 1 are treated as holes in the
  last island (polygon) that was created.

- Added IsInteriorRing() function in the TABRegion class to validate if a ring 
  in a polygon is an external or an internal ring. The function returns 
  true if the specified ring is an interior ring. The function 
  mitab_c_is_interior_ring() in mitab_capi.c has been created too to call 
  IsInteriorRing() if the feature is a region.

- In mitab_mapheaderblock.cpp, the Coordsys2Int() function used integer values 
  to check for overflow. However, in some case, integer was to small and caused
  problems with applications that called SetSpatialFilter() with a filter 
  much larger than the file's bounds.  So, this function now uses doubles 
  internally for comparison, but still returns and receives integers.

- Add SetSpatialFilter function in the TABSeamless class, to use seamless 
  layer in the right way. Now, the filter is applied on each data file and
  on the index file. (Bug 164 (MapServer))


Version 1.2.1 - (2002-05-08)
----------------------------
